fix: resolve critical wiring gaps in cancel flow, market buys, persistence, and GTD expiry
- Store clusterOrderId on first egress status update so cancel orders reach the cluster
- Release balance holds on cluster-confirmed cancellation, rejection, and expiry
- Reject cancel requests when order is in-flight (clusterOrderId not yet assigned)
- Estimate market buy price from best ask with 5% slippage buffer for correct totalPrice
- Filter removed levels (qty=0) from book delta best-price extraction for synthetic orders
- Wire PostgreSQL persistence with graceful degradation when DB unavailable
- Implement GTD expiry checker with 1-second scheduled timer thread
- Add PUT to CORS allowed methods for risk config hot-reload

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>